# dev-container-tauri

./: README.md
.cargo/: config.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
tauri-example/: README.md  package.json  tsconfig.json  tsconfig.node.json
tauri-example/src/: App.tsx  app.tsx  global.css  main.tsx
tauri-example/src-tauri/: Cargo.toml  tauri.conf.json
tauri-example/src-tauri/migrations/: 202309041539_create_tables.sql  202309081706_create_tables.sql
tauri-example/src-tauri/src/: main.rs
tauri-example/src/components/: greet-message.tsx  link.tsx
tauri-example/src/pages/: home.tsx  log.tsx  notes.tsx  search.tsx
tauri-example/src/services/: api.ts  database.ts  event.ts  store.ts
tauri-react-app/src/: App.tsx
tauri-react-app/src-tauri/: Cargo.toml
