[package]
name = "tauri-example"
version = "0.0.0"
description = "An example Tauri App inside a Docker container"
authors = ["brklntmhwk"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brklntmhwk/dev-container-tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
dotenvy = "0.15.7"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = [ "fs-remove-file", "fs-rename-file", "fs-read-file", "fs-copy-file", "fs-write-file", "dialog-all", "shell-open"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["postgres"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
